force-app/main/default/objects/Memory_Config__mdt/Memory_Config__mdt.object-meta.xml
<CustomObject>
    <label>Memory Config</label>
    <pluralLabel>Memory Configs</pluralLabel>
</CustomObject>