force-app/main/default/objects/Memory_Config__mdt/fields/Compaction_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Compaction_Threshold__c</fullName>
    <description>Serialized history size (chars) above which HistoryCompactor summarizes older messages. History_Json__c caps at 131,072. Blank uses the code default (90,000).</description>
    <label>Compaction Threshold</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>