force-app/main/default/objects/Memory_Config__mdt/fields/Embedding_Provider__c.field-meta.xml
<CustomField>
    <fullName>Embedding_Provider__c</fullName>
    <description>LLM_Provider__mdt DeveloperName used to embed memory content for vector recall (blue-sky). Blank disables embeddings.</description>
    <label>Embedding Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>