force-app/main/default/objects/Memory_Config__mdt/fields/Enable_Fact_Extraction__c.field-meta.xml
<CustomField>
    <fullName>Enable_Fact_Extraction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, successful runs enqueue an LLM pass that extracts durable facts/preferences into Agent_Memory__c (M2).</description>
    <label>Enable Fact Extraction</label>
    <type>Checkbox</type>
</CustomField>