force-app/main/default/objects/Memory_Config__mdt/fields/Enable_Reflection__c.field-meta.xml
<CustomField>
    <fullName>Enable_Reflection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, terminated runs (success and failure) enqueue an LLM pass that writes an Agent-scoped lesson to Agent_Memory__c (M3).</description>
    <label>Enable Reflection</label>
    <type>Checkbox</type>
</CustomField>