force-app/main/default/objects/Memory_Config__mdt/fields/Index_Name__c.field-meta.xml
<CustomField>
    <fullName>Index_Name__c</fullName>
    <label>Index Name</label>
    <type>TextArea</type>
</CustomField>