force-app/main/default/objects/Memory_Config__mdt/fields/Maintenance_Provider__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Provider__c</fullName>
    <description>LLM_Provider__mdt DeveloperName for maintenance calls (compaction, fact extraction, reflection, consolidation). Point at a cheap/mini model; blank falls back to the agent's own provider.</description>
    <label>Maintenance Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>