force-app/main/default/objects/Memory_Config__mdt/fields/Max_Recall_Items__c.field-meta.xml
<CustomField>
    <fullName>Max_Recall_Items__c</fullName>
    <description>Maximum memories injected into the system prompt per run (M2). Blank uses the code default (10).</description>
    <label>Max Recall Items</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>