force-app/main/default/objects/Memory_Config__mdt/fields/Memory_Type__c.field-meta.xml
<CustomField>
    <fullName>Memory_Type__c</fullName>
    <label>Memory Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Hybrid</fullName>
                <default>true</default>
                <label>Hybrid</label>
            </value>
            <value>
                <fullName>SalesforceOnly</fullName>
            </value>
            <value>
                <fullName>VectorDB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>