force-app/main/default/objects/Memory_Config__mdt/fields/Recall_Scopes__c.field-meta.xml
<CustomField>
    <fullName>Recall_Scopes__c</fullName>
    <description>CSV of Agent_Memory__c scopes to recall (M2), e.g. "User,Agent,Global". Blank recalls all scopes.</description>
    <label>Recall Scopes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>