force-app/main/default/objects/Memory_Config__mdt/fields/VectorDB_API_Key_NC__c.field-meta.xml
<CustomField>
    <fullName>VectorDB_API_Key_NC__c</fullName>
    <label>VectorDB API Key NC</label>
    <type>TextArea</type>
</CustomField>