force-app/main/default/objects/Memory_Config__mdt/fields/VectorDB_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>VectorDB_Endpoint__c</fullName>
    <label>VectorDB Endpoint</label>
    <type>Url</type>
</CustomField>